// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckArea component Tests Check CheckArea component mode default 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid var(--border-color)",
      "display": "flex",
      "flex": "1 0 130px",
      "fontSize": "1.1em",
    }
  }
>
  <div
    style={
      Object {
        "WebkitUserSelect": "none",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "0 0 45px",
          "justifyContent": "space-between",
          "margin": "5px 10px 5px 15px",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        />
        <span
          style={
            Object {
              "color": "var(--text-color-light)",
            }
          }
        >
          Titus
           
          1:1
        </span>
      </div>
      <div
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-fullscreen"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="click_show_expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "direction": "ltr",
          "flex": "auto",
          "overflowY": "auto",
          "padding": "0 15px 10px",
        }
      }
    >
      <div
        style={
          Object {
            "color": "var(--text-color-light)",
            "userSelect": "none",
          }
        }
      >
        <span>
          This is the verse text
        </span>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderLeft": "1px solid var(--border-color)",
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
        "overflowY": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <div
        style={
          Object {
            "overflow": "auto",
            "padding": "5px",
            "textAlign": "center",
          }
        }
      >
        <span>
          no_selection
        </span>
        <br />
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckArea component Tests Test CheckArea component mode comment) 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid var(--border-color)",
      "display": "flex",
      "flex": "1 0 130px",
      "fontSize": "1.1em",
    }
  }
>
  <div
    style={
      Object {
        "WebkitUserSelect": "none",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "0 0 45px",
          "justifyContent": "space-between",
          "margin": "5px 10px 5px 15px",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        />
        <span
          style={
            Object {
              "color": "var(--text-color-light)",
            }
          }
        >
          Titus
           
          1:1
        </span>
      </div>
      <div
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-fullscreen"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="click_show_expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "direction": "ltr",
          "flex": "auto",
          "overflowY": "auto",
          "padding": "0 15px 10px",
        }
      }
    >
      <div
        style={
          Object {
            "color": "var(--text-color-light)",
            "userSelect": "none",
          }
        }
      >
        <span>
          This is the verse text
        </span>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderLeft": "1px solid var(--border-color)",
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
        "overflowY": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "auto",
          "flexDirection": "column",
          "height": "100%",
          "padding": "5px 15px 0 15px",
        }
      }
    >
      <div
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <span
          className="glyphicon glyphicon-comment"
          style={
            Object {
              "marginRight": "5px",
            }
          }
        />
        comment
      </div>
      <div
        className="form-group"
        style={
          Object {
            "display": "flex",
            "flex": "auto",
          }
        }
      >
        <textarea
          autoFocus={true}
          className="form-control"
          defaultValue="Comment!"
          id="formControlsTextarea"
          onBlur={[Function]}
          onInput={[Function]}
          style={
            Object {
              "flex": "auto",
            }
          }
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckArea component Tests Test CheckArea component mode edit) 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid var(--border-color)",
      "display": "flex",
      "flex": "1 0 130px",
      "fontSize": "1.1em",
    }
  }
>
  <div
    style={
      Object {
        "WebkitUserSelect": "none",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "0 0 45px",
          "justifyContent": "space-between",
          "margin": "5px 10px 5px 15px",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        />
        <span
          style={
            Object {
              "color": "var(--text-color-light)",
            }
          }
        >
          Titus
           
          1:1
        </span>
      </div>
      <div
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-fullscreen"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="click_show_expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "direction": "ltr",
          "flex": "auto",
          "overflowY": "auto",
          "padding": "0 15px 10px",
        }
      }
    >
      <div
        style={
          Object {
            "color": "var(--text-color-light)",
            "userSelect": "none",
          }
        }
      >
        <span>
          This is the verse text
        </span>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderLeft": "1px solid var(--border-color)",
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
        "overflowY": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "auto",
          "flexDirection": "column",
          "height": "100%",
          "padding": "5px 15px 0 15px",
        }
      }
    >
      <div
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        <span
          className="glyphicon glyphicon-pencil"
          style={
            Object {
              "marginRight": "5px",
            }
          }
        />
        edit_verse
      </div>
      <div
        className="form-group"
        style={
          Object {
            "display": "flex",
            "flex": "auto",
            "flexDirection": "column",
            "marginBottom": "5px",
          }
        }
      >
        <textarea
          autoFocus={true}
          className="form-control"
          defaultValue="This is the verse text"
          id="formControlsTextarea"
          onBlur={[Function]}
          onInput={[Function]}
          style={
            Object {
              "direction": "ltr",
              "flex": "auto",
            }
          }
          type="text"
        />
        <div
          style={
            Object {
              "flex": "0 0 65px",
              "fontSize": "0.9em",
              "marginTop": "5px",
            }
          }
        >
          first_make_change
          <br />
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              style={
                Object {
                  "flex": "1",
                }
              }
            >
              <div
                className="checkbox disabled"
                style={
                  Object {
                    "color": "var(--text-color-light)",
                    "marginLeft": "10px",
                    "marginRight": "10px",
                  }
                }
              >
                <label
                  title=""
                >
                  <input
                    checked={false}
                    disabled={true}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  spelling
                </label>
              </div>
              <div
                className="checkbox disabled"
                style={
                  Object {
                    "color": "var(--text-color-light)",
                    "marginLeft": "10px",
                    "marginRight": "10px",
                  }
                }
              >
                <label
                  title=""
                >
                  <input
                    checked={false}
                    disabled={true}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  punctuation
                </label>
              </div>
              <div
                className="checkbox disabled"
                style={
                  Object {
                    "color": "var(--text-color-light)",
                    "marginLeft": "10px",
                    "marginRight": "10px",
                  }
                }
              >
                <label
                  title=""
                >
                  <input
                    checked={false}
                    disabled={true}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  word_choice
                </label>
              </div>
            </div>
            <div
              style={
                Object {
                  "flex": "1",
                }
              }
            >
              <div
                className="checkbox disabled"
                style={
                  Object {
                    "color": "var(--text-color-light)",
                    "marginLeft": "10px",
                    "marginRight": "10px",
                  }
                }
              >
                <label
                  title=""
                >
                  <input
                    checked={false}
                    disabled={true}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  meaning
                </label>
              </div>
              <div
                className="checkbox disabled"
                style={
                  Object {
                    "color": "var(--text-color-light)",
                    "marginLeft": "10px",
                    "marginRight": "10px",
                  }
                }
              >
                <label
                  title=""
                >
                  <input
                    checked={false}
                    disabled={true}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  grammar
                </label>
              </div>
              <div
                className="checkbox disabled"
                style={
                  Object {
                    "color": "var(--text-color-light)",
                    "marginLeft": "10px",
                    "marginRight": "10px",
                  }
                }
              >
                <label
                  title=""
                >
                  <input
                    checked={false}
                    disabled={true}
                    onChange={[Function]}
                    type="checkbox"
                  />
                  other
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckArea component Tests Test CheckArea component mode select) 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid var(--border-color)",
      "display": "flex",
      "flex": "1 0 130px",
      "fontSize": "1.1em",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "0 0 45px",
          "justifyContent": "space-between",
          "margin": "5px 10px 5px 15px",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        />
        <span
          style={
            Object {
              "color": "var(--text-color-light)",
            }
          }
        >
          Titus
           
          1:1
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "direction": "ltr",
            "flex": "auto",
            "overflowY": "auto",
            "padding": "0 15px 10px",
          }
        }
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
        >
          <span>
            This is the verse text
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderLeft": "1px solid var(--border-color)",
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
        "overflowY": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "alignItems": "center",
          "display": "flex",
          "flex": "1",
          "justifyContent": "center",
          "overflow": "auto",
        }
      }
    >
      <div
        style={
          Object {
            "overflow": "auto",
            "padding": "5px",
            "textAlign": "center",
          }
        }
      >
        <span>
          please_select
        </span>
        <br />
        <span>
          <strong
            style={
              Object {
                "color": "var(--accent-color)",
              }
            }
          >
            "God's"
          </strong>
        </span>
        <br />
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckArea component Tests Test CheckArea component where GL Aligned Text not found (uses Greek quote instead) 1`] = `
<div
  style={
    Object {
      "borderBottom": "1px solid var(--border-color)",
      "display": "flex",
      "flex": "1 0 130px",
      "fontSize": "1.1em",
    }
  }
>
  <div
    style={
      Object {
        "WebkitUserSelect": "none",
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "0 0 45px",
          "justifyContent": "space-between",
          "margin": "5px 10px 5px 15px",
        }
      }
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <span
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        />
        <span
          style={
            Object {
              "color": "var(--text-color-light)",
            }
          }
        >
          Titus
           
          1:1
        </span>
      </div>
      <div
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-fullscreen"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="click_show_expanded"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "direction": "ltr",
          "flex": "auto",
          "overflowY": "auto",
          "padding": "0 15px 10px",
        }
      }
    >
      <div
        style={
          Object {
            "color": "var(--text-color-light)",
            "userSelect": "none",
          }
        }
      >
        <span>
          This is the verse text
        </span>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "borderLeft": "1px solid var(--border-color)",
        "display": "flex",
        "flex": 1,
        "justifyContent": "center",
        "overflowY": "auto",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitUserSelect": "none",
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "justifyContent": "center",
        }
      }
    >
      <div
        style={
          Object {
            "overflow": "auto",
            "padding": "5px",
            "textAlign": "center",
          }
        }
      >
        <span>
          no_selection
        </span>
        <br />
      </div>
    </div>
  </div>
</div>
`;
